--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+lazy_static = "1.5.0"
 # Used for converting bytes to enums
 num = "0.4.3"
 num-derive = "0.4.2"
