--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 lazy_static = "1.5.0"
+linefeed = "0.6.0"
 # Used for converting bytes to enums
 num = "0.4.3"
 num-derive = "0.4.2"
